小的结构调整

--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1208,30 +1208,30 @@
 
 ### 1、取消这些会议
 
-* 不需要你解决问题的会议
+#### 1）不需要你解决问题的会议
   * 很多组织每周都有一些“状态报告”之类的会议，如果不需要你参与决策或是解决问题，这样的会议就不必参加
-* 绝对不要举行多人参加的顺序式进度报告会议
+#### 2）绝对不要举行多人参加的顺序式进度报告会议
   * 除发言人和项目经理之外，每个人都觉得很无聊
   * 顺序式进度报告会议不是会议，更像是一种注重形式的仪式
   * 改进实践：
     - 每日站立会议
     - 每周一对一会议
     - 每周的电子邮件进度报告
-* 没有存在理由的会议
+#### 3）没有存在理由的会议
   * 有些会议似乎从远古时代就已经存在了
   * 会议最早的负责人早已离开原来的职位
   * 最初召开的意图已经消失不见，剩下的只有会议
-* 没有会后行动的会议
-* 上层主管的顺序式进度报告会议
+#### 4）没有会后行动的会议
+#### 5）上层主管的顺序式进度报告会议
   * 掠过这些会议，用电子邮件告知主管你的工作进度
 
 ### 2、举行下列会议
 
-* 项目启动会议
+#### 1）项目启动会议
   * 为整个项目设定积极的基调
   * 如果章程还未确定，和团队成员一起编写项目的章程
   * 如果章程已经编写，那就和大家把章程过一遍
-* 发布版本规划会议
+#### 2）发布版本规划会议
   * 规划出希望一个迭代交付哪些功能
     * 用规划扑克来估算功能的相对大小
     * 客户或产品负责人就要对功能进行排序
@@ -1240,7 +1240,7 @@
     * 对于完成的定义
     * 可能的发布日期
     * 已经按迭代组织好并且有工作量预估的待开发功能列表
-* 进度报告会议
+#### 3）进度报告会议
   * 每日站立会议
     * 我昨天完成了什么
     * 我今天计划要做什么
@@ -1261,7 +1261,7 @@
   * 向管理层报告进度
     * 定期为管理层提供数据也许可以阻止他们管理的过死
     * 迭代结束时给管理层发送进度报告
-* 项目团队会议
+#### 4）项目团队会议
   * 要将项目团队会议作为解决问题的会议，而不是为了报告进度
   * 提纲
     * 议题、时间、地点
@@ -1270,7 +1270,7 @@
     * 本周遇到的问题
     * 其他话题
     * 回顾以往行动计划
-* 迭代审查会议
+#### 5）迭代审查会议
   * 迭代尾声，团队会向产品负责人展示工作成果
   * 可以随工作推进不断检视并调整工作方式
   * 此外，团会会讨论开发速度图表等其他在项目仪表板上的团队数据，最终团队会进行一次中期回顾
@@ -1681,4 +1681,5 @@
 * 如果项目经理有在项目中集成测试的规划，你就可以做到
 * 使用TDD，可以提升产品的设计和代码的质量
 * 可以考虑在项目中使用测试连续体系
+
 
