增加创业创品牌

--- a/创业就是创品牌.md
+++ b/创业就是创品牌.md
@@ -131,7 +131,7 @@
 ### 3、能满足顾客需求就够吗
 
 * 20世纪80年代，物质匮乏，产品有限，那时能够有效满足消费者某个需求的品牌确实可以得到很好的发展
-* 然后现在物质极大丰富，能满足某一需求的产品很多，仅从满足消费者已有需求的角度出发，难有创建成功品牌的机会
+* 然而现在物质极大丰富，能满足某一需求的产品很多，仅从满足消费者已有需求的角度出发，难有创建成功品牌的机会
 * 现在创建成功品牌的关键在于发掘并满足消费者的潜在需求，即开创新的市场；通过在消费者心智中建立起差异化的品牌定位，才可能创建起一个强大的品牌
 * 举个栗子
   * 海王银得菲：扑了个空
@@ -349,9 +349,7 @@
 ### 1、为新品类命名
 
 * 新品类命名的基本原则：简单、直接、通俗、易懂并符合大众认知
-
 * 新品类的主要命名方式：
-
   * 品类+品类
     * 维生素水：脉动
     * 大理石瓷砖：简一
