--- a/伟大的设计.md
+++ b/伟大的设计.md
@@ -215,3 +215,82 @@
 - 顾客体验供应链管理首先将顾客的所思、所见、所闻和所感设定为目标
 - 你必须让顾客体验供应链管理融入公司文化的各方面，还还必须以此评估并奖励你的员工
 - 大规模外包的风险是你最终得到的是一个大杂烩，你不再知道的或拥有的东西，但仍需要你去加以管理
+
+## 七、会说话的产品和服务
+
+- 大多数商人很难意识到设计语言就是在讲故事；他抓着顾客的需求和渴望，编织成一个复合顾客期望的故事
+- 所有的产品都会跟顾客沟通；你不需要很费劲就能看到不少公司在这一点做的很糟糕，或是没有把故事讲对，或是许下一些不可能做到的承诺
+- 如果你在做东西，那么你就在向人们说些什么
+- 在宜家，你的体验是多样的，这种混合的体验很大程度是宜家通过设计语言引导你主要到宜家店内真正聚焦的东西------具有可承受价格的品质家具
+- 设计应该创造出能表达企业核心价值的产品或服务
+- 设计不是一个声明，而是一个持续的对话；这个故事需要用连贯流畅的方式来组织，而不是将各种东西生硬地堆砌在一起
+- 完善你的设计语言
+  - 以自我定位为基础开始出发（你是谁？你做些什么？为什么它如此重要？）
+  - 塑造那些必不可少的特质
+  - 由你自己定义你是谁
+  - 将顾客体验容易你的流程
+- 创建一个标志性的产品，可以让你的整个产品线产生晕轮效应，从而提升所有产品的价值
+
+## 八、伟大的设计源于企业文化
+
+生活和商业同样充满了变化，因此需要一个以文化为中心的方式应对变化
+
+设计驱动型公司的核心要素：
+
+- 聚焦
+  - 应该总是关注顾客体验上；
+  - 你的整个组织文化，都必须跟你所追求的顾客体验保持一致
+  - 这不意味着总是说好，而应该理解顾客的需求和欲望，然后满足他们
+- 长期
+  - 你的顾客所获得的即时满足与快乐，是建立在对顾客体验供应链的长期关注上的
+- 真实
+  - 你必须清楚顾客要逼你想象的更聪明和更有眼光；你必须真心实意并依承诺行事，不然人们会感觉不到它
+- 警觉
+  - 你的一部分警觉是叮住你的竞争对手，但不要浪费太多时间把他们当敌人
+  - 要不断的做出卓越的设计并推向市场，你需要细心的打磨细节
+  - 保持警觉让伟大的设计得以在整个系统中实现；如果你不看着它，设计就会下降
+- 新颖
+  - 新颖的一个理解就是与众不同，不照本宣科，跳出固有思维
+  - 真正的核心在于风险控制和研究方法；研究有时候会阻碍新颖性，尤其是焦点小组讨论会出现中庸的思维方式
+  - 想要80%的市场都爱上你的产品，你就要做好准备接受另外20%人的质疑
+  - 要想实现目标，就必须接受风险
+  - 至少在开始阶段，需要给予设计人员自由的空间，用设计和创意去探索和触碰边界
+- 可重复
+  - 作为设计驱动的公司，你甚至必须做到：用不同的方式将同样的事情再做一遍
+
+## 九、伟大的设计成就未来
+
+人们真正想要什么样的生活？
+
+- 人们一直在寻找让他们感觉到更有活力的伟大体验；
+- 人们做任何事情都基于对更好体验的期望；
+- 人类努力改善所处的环境，追求人生的终极目标：幸福和快乐
+
+你需要在你的产品或服务中以设计一个卓越的人类体验为开端；这就意味你永远要把人的因素放在第一位，以此识别人们对你说提供的产品的情感反应。这看似容易，实际很难，因为我们常常倾向于避开那些带有情感的东西
+
+## 十、总结
+
+### 1、设计至关重要
+
+- 伟大的设计是你与顾客建立一个间接的联系，并为他们的生活创造价值的最好途径；它是你与顾客建立联系的方式
+- 它是关于你的顾客所接触到的关于你、你的产品和服务的几乎全部方案所构成的广义的体验；我们称之为顾客体验供应链
+- 它在本质上是感性的；你必须在脑中树立这一思想，不要回避
+- 它应该是一个真实而诱人的想法；不要试图去模仿，做你自己，做优秀的自己
+- 更为重要的是，设计应被视为你的企业顶层战略要素
+
+### 2、设计是一个过程，不是一个事件
+
+- 设计思维与过程需要融入你所做的一切之中，每天都应如此；你需要将它融入生活，以它为信仰；你需要管理它
+- 设计是所有人的责任；作出伟大的设计并不只是设计师的工作；伟大的设计需要每个人的参与，从组织架构的顶层到底层，从流程的一端到另一端
+- 顾客体验供应链需要持续地给予定义、提供人手、加以引领和管理；它是你的顾客体验生命线：你的顾客从你身上所看到的、所接触到的、所听到的、所闻到的和所感知到的
+- 这些都需要远见、勤奋和纪律
+
+### 3、如果容易，每个人早就做了
+
+- 成为设计驱动需要重大的文化变革；你需要从上到下改变你的公司，准备好应对公司体系中的反抗者，战胜他们，继续向前
+- 做出伟大的设计需要时间；在一切都在持续加速的当今世界，投入时间是很难的；但你必须得到正确的结果，这就需要时间
+- 你必须去做这件苦差事；最佳方案通常是最难开发和实施的，但这必须成为你的焦点；经过几次以后，这会变得容易一些
+- 毫无疑问你将会犯错；每个人都会犯错，包括苹果公司；从中学习就好，让自己变得更好
+- 这需要金钱；无法绕过
+- 你必须怀有信念与承诺；第一次失败的时候不要放弃；坚持住，满满地就会看到成效
+- 信任你对人性的直觉和理解；说到底，你也是人，不是吗？
