增加创新者的窘境

--- a/创新者的窘境.md
+++ b/创新者的窘境.md
@@ -10,13 +10,24 @@
 - 2）技术进步的步伐，经常会超过市场的实际需求
 - 3）成熟企业的客户和财务结构更佳偏重于投资看上去对他们最有吸引力的项目
 
-### 2、利用破坏性创新的原则
+### 2、破坏性创新的原则
 
-- 1）企业资源分布取决于客户和投资者
+- 1）企业资源分配取决于客户
 - 2）小市场不能解决大企业的增长需求
 - 3）无法对不存在的市场进行分析
 - 4）机构的能力决定了它的局限性
+  - 机构的能力体现在流程和价值观上（还有资源）
+  - 构成当前业务模式核心能力的流程和价值观，决定了它无力应对市场的破坏性变化
 - 5）技术供应可能并不等同于市场需求
+  - 破坏性技术在成熟市场不具有吸引力的特性，往往构成在新兴市场上的最大价值的特性
+
+### 3、如何建立竞争优势
+
+- 1）在独立的小机构内设立项目来开发和推广新技术
+- 2）机构足够小，很容易满足小机遇和小收益
+- 3）市场在不断尝试、学习和再尝试的过程中成形
+- 4）利用主流机构的一些资源，但对主流机构的流程和价值观避而远之
+- 5）在开展破坏性技术的商业化运作时发现新市场，而不是寻求技术突破，使破坏性产品能够作为一种延续性技术参与主流市场的竞争
 
 ## 一、为什么大企业会失败
 
@@ -33,3 +44,214 @@
   - 1984年，Rodime研制出3.5英寸硬盘，容量20M以内，台式机客户不感兴趣，他们需要40M以上的，最终销往笔记本市场
   - 1989年，Prairietek推出2.5英寸硬盘，笔记本客户感兴趣，所有3.5英寸硬盘厂家都顺利推出2.5英寸硬盘
   - 1992年，1.8英寸硬盘上市，笔记本客户不感兴趣，最终销往便携式心脏监护装置市场，直到1995年销售额1.3亿美元的1.8英寸市场中，新兴企业占了98%的份额
+
+## 二、价值网络和创新推动力
+
+![创新者的窘境-2-1](/Users/jearry/StudyNote/images/创新者的窘境-2-1.jpg)
+
+技术S曲线：技术发展的早期，性能提高的速度相对比较缓慢；随着人们对技术的理解逐渐加深，控制力度逐渐加强，应用范围更加广泛，技术改进的速度将会不断加快；但在成熟阶段，这项技术将逐渐接近自然或物理极限，需要更长的时间才能实现改进。
+
+战略性技术管理的本质：判断当前技术S曲线何时通过拐点，同时确认并发展任何自下游兴起，并将最终取代现有方法的新技术。
+
+价值网络：既一种大环境，企业正式在这个大环境下确定客户的需求，并对此采取措施，解决问题，征求客户意见，应对竞争对手，并争取利润最大化
+
+- 1、破坏性技术首先由成熟企业研制成功
+- 2、市场营销人员随后收集主要客户的反馈
+- 3、成熟企业加快对延续性技术的开发步伐
+- 4、新企业已经出现，破坏性技术市场在反复尝试中逐渐成形
+- 5、新兴企业向高端市场转移
+- 6、成熟企业在维护客户基础方面棋慢一招
+
+## 三、挖掘机行业的破坏性技术变革
+
+- 1837年蒸汽铲土机
+- 1920转汽油动力发动机，大部分企业完成过渡
+- 1928转柴油动力发动机，大部分企业完成过渡
+- 1970年转液压挖掘机，小部分企业完成过渡，大部分都是新兴企业
+  - 早期的液压挖掘机，容量小，工作半径短，老客户的需求满足不了
+  - 液压技术发展到一定阶段，能满足老客户的需求，同时故障率低，导致客户倒戈，而你已经没有机会
+  - 这个过程持续20年
+
+创新者陷入窘境：更努力的工作，更聪明的管理，更积极的投资，更认真的听取客户建议，这些都是应对延续性技术问题的解决之道；但是这些经营原则在应对破坏性技术时完全失效，而且在很多情况下甚至还会造成反效果
+
+## 四、回不去的低端市场
+
+领先企业总是能很快进入高端市场
+
+理性的管理者很少能找到充分的理由进入规模小、需求不明确，而且利润率更低的低端市场
+
+- 1960年小型钢铁厂的炼钢技术开始具备商业上的可行性
+- 综合性钢铁厂
+  - 使用的主要原料是铁矿石
+  - 一吨钢工时是2.3小时
+- 小型钢铁厂
+  - 使用的主要原料是废钢
+  - 一吨钢工时是0.6小时，价格低15%
+  - 开始时，质量、成本、利润都处于市场的最底端，只能生产螺纹钢
+  - 在螺纹钢市场站稳脚跟后，开始向钢条、棒材和角钢市场发起冲击
+  - 再然后的目标市场就是结构性钢梁
+  - 薄板连轧技术
+    - 建造成本是传统钢铁厂的1/10
+    - 制造成本降低20%
+    - 刚开始做不了平滑、完美无缺的表面，只能在低端市场采用
+    - 后面品质不断提升，侵占了原来的高端市场
+
+## 五、把开发破坏性技术的职责赋予存在客户需求的机构
+
+面对客户明确说“不”的破坏性技术时，管理者该何去何从？
+
+- 一种选择：说服企业内的每一个人
+  - 需要与机构内的一股强大趋势对抗
+- 一种选择：创建一个独立的机构，使这个机构直接面向需要这种技术的新兴客户群体
+  - 顺应趋势，成功的概率远远高于第一种
+
+- 昆腾公司
+  - 1984年工程师察觉到3.5英寸硬盘市场正在出现，决定离职创建一个新公司
+  - 昆腾公司没有放人，决定成立一家分公司Plus，给予资金支持，持股80%
+  - 1987年8英寸和5.25英寸市场几乎为0，昆腾收购了Plus公司，完全关闭原来的公司，Plus高管安排在最重要的职位上
+- 计算机行业
+  - 行业龙头IBM主营大型机
+  - 微型机市场由DEC、通用数据、Prime等公司创造
+  - 个人电脑市场由苹果、Commodore公司、Tandy和IBM公司创造
+  - 便携式计算机市场由东芝、夏普、Zenithe等公司创造
+  - DEC遭受最大挫折，四度推出个人电脑产品，又四度退出个人电脑市场（四次尝试都在母公司内进行）
+  - IBM在远离纽约总部的弗罗里达州成立独立机构负责个人电脑市场
+- 折扣零售业
+  - 第一家折扣零售店时柯维特斯成立195x年（比百货店价格低20%-40%）
+  - 传统百货店一个毛利40%，一年库存周转4次，折扣零售业毛利20%，一年坤村周转8次
+  - 大部分传统零售商都没有过渡到折扣零售业
+    - 伍尔沃思，内部成立伍尔科连锁店，最终以失败告终
+    - 无法在同一个机构内，同时延续两种不同的文化和盈利模式
+- 喷墨打印机
+  - 速度慢，打印成本高，效果也不如激光打印机；但是体积小，价格远远低于激光打印机
+  - 惠普成立独立机构负责喷墨打印机开发
+  - 让两项业务相互竞争，独立经营
+
+## 六、如何使机构与市场的规模相匹配
+
+身处破坏性变革中的企业必须成为领先者，而不是追随者；要做到这一点，就必须让与目标市场规模相匹配的商业机构来负责开发破坏性的技术项目
+
+- 苹果的牛顿PDA案列
+  - 90年代初，PDA市场出现增长潜力，苹果入局开发PDA产品，命名牛顿 Newton
+  - 1993-1994，共计卖出14W态Newton，占苹果营收的1%
+  - 大家都认为牛顿是失败产品
+    - 花费巨资开发当时最先进的移动通信和手写识别技术
+    - 手写识别功能令人失望
+    - 无线通信增加成本
+    - 新兴市场规模小，参与机构必须能以较小的规模实现盈利
+  - 相比1979 Apple II的上市，销量是Apple II的3倍，Apple II却是成功产品，Apple I只卖出200台
+
+相比进入成熟市场，创造新市场的风险要低很多，而其回报率却要高出很多
+
+让小机构去利用小机遇
+
+- 电机控制行业
+  - 1968年莫迪康上市电子可编程电机控制器
+  - 开始的产品无法在恶劣的环境下使用，主流机床制造商都不采用，从而开发了工厂自动化这个新市场
+
+## 七、发现新市场
+
+尚不存在的市场是无法分析的，因此，管理者为应对破坏性技术变革而采取的战略和计划应该是有关学习和发现的计划，而不是事关执行的计划
+
+没有人（包括我们和客户）能够在真正使用之前了解破坏性产品是否能够投入使用，怎样使用，或者使用量有多大。
+
+- 惠普Kittyhawk硬盘
+  - 为准客户定制硬盘
+  - 而忽略后续的用户需求，导致失败
+- 本田公司对北美摩托车行业的冲击
+  - 公司人员使用超级幼兽的过程中发现需求
+
+- 英特尔如何发现微处理器市场
+  - 但是英特尔公司主营为DRAM存储器产品
+  - 在客户定制过程开发了微处理器，同时购买了专利权
+  - 并没有制定市场开发战略，只是将芯片卖给任何能用到的人
+
+## 八、如何评估机构的能力和缺陷
+
+要想获得持续的成功，优秀的管理者就需要掌握足够的技巧。这种技巧不仅仅表现在挑选、培训、激励员工，使能者胜任，还表现在要善于为需要完成的任务选择、创建并筹备合适的机构、使能者适得其所。
+
+机构的能力受到3个因素影响
+
+- 资源
+  - 包括：人员、设备、技术、产品设计、品牌、信息、现金以及供应商、分销商和客户的关系等
+  - 资源易于在机构间转移
+- 流程
+  - 将资源投入转化为产品或价值更大的服务的过程中，人们所采取的互动、协调、沟通、和决策的模式就是流程
+  - 流程还包括：产品开发、采购、市场研究、预算、规划、员工发展和补偿、资源分配
+  - 流程的建立是为了让员工持续不断重复地完成任务
+- 价值观
+  - 企业价值观就是在确定决策优先级别时所遵循的标准
+    - 有的以道德为基础
+    - 有的以健康为基础
+    - 有的以安全为基础
+  - 企业价值观的演变途径
+    - 与可接受的毛利率相关
+    - 企业需要发展到多大规模才会引起人们的注意
+
+如果确定机构不适合执行新的任务，有三种途径创造新的能力：
+
+- 收购另外一家流程和价值观与新任务极为匹配的公司
+  - 如果资源是收购的主要目的，可以将其并入母公司
+  - 如果流程和价值观是其获得成功的真正驱动力，千万不能并入母公司，合并会让原来的流程和价值观化为乌有
+- 试图改变当前机构的流程与价值观
+- 成立一个独立的机构，在这个机构内针对新问题开发出一套新的流程和价值观
+
+## 九、产品性能、市场需求和生命周期
+
+但产生性能过度供给现象时，破坏性技术的机遇也呼之欲出，然后开始从价值网络的下方冲击成熟市场。
+
+产品的演变划分为4个阶段
+
+- 功能性
+  - 当没有能够满足市场对功能的要求时，竞争的基础就是功能性
+- 可靠性
+  - 一旦有两种以上产品能够很好满足功能性需要，客户倾向于通过可靠性来选择产品
+- 便捷性
+  - 当两个以上的厂家具备提供超出市场需要的可靠性时，竞争的基础便转向便捷性
+- 价格
+  - 当以上需求都能满足时，竞争的基础就转向价格
+- 推动购买等级从一个阶段转向另一个阶段的因素就是性能过度供给
+
+破坏性技术的其他普遍特征
+
+- 破坏性产品在主流市场几乎没有价值的属性，通常会成为新兴市场最大的卖点
+- 相比成熟产品，破坏性产品一般更简单、更便宜、更可靠、更便捷
+
+发生在会计软件市场的性能过度供给
+
+- Intuit公司的Quicken主导个人财物软件市场
+- 无须阅读使用说明手册就可以使用软件
+- 开发者观察用户如何使用产品，而不是询问
+- 为客户提供足够的功能，而不是超强的功能
+
+![创新者的窘境-9-1](/Users/jearry/StudyNote/images/创新者的窘境-9-1.jpg)
+
+性能过度供给的企业选择的战略性方法：
+
+- 1、进入高端市场，同时放弃低端市场
+  - 常规企业的做法
+- 2、与消费者保持一致（很难做到）
+  - 康柏公司，根据更低级别市场需求，生产出功能适度的低价计算机产品，竭力抑制进入高端市场
+- 3、利用市场营销计划加深市场轨迹的坡度
+  - 微软、Intel、硬盘公司非常有效的执行了这一战略
+- 没有所谓最佳战略，理解这一曲线时成功的关键
+- 能长期做到这一点的企业屈指可数，大多数运行良好的企业都会不自觉的向坐标图的东北角方向移动，从而导致自己深陷竞争基础发生改变的漩涡，并招致破坏性技术从价值网络下方发起的攻击
+
+## 十、管理破坏性技术变更：案例研究
+
+- 怎样判断某项技术是否具有破坏性
+
+  - 首先绘制一张市场所要求的性能改善轨线
+  - 并将其与技术能够提供的性能改善轨线进行比较
+
+  ![创新者的窘境-1-1](/Users/jearry/StudyNote/images/创新者的窘境-1-1.jpg)
+
+  - 观察用户如何使用产品能够提供更多可靠的信息
+
+- 
+
+## 十一、创新者的窘境：概要
+
+在单纯追求利润和增长率的过程中，一些优秀的企业的优秀管理者因为使用了最佳管理技巧而导致企业的失败。
+
+但是企业并不应该仅仅因为这些管理技巧无力应对破坏性技术所带来的威胁，而放弃这些曾使他们在主流市场上大放异彩的能力、组织结构和决策能力
