--- a/创新者的窘境.md
+++ b/创新者的窘境.md
@@ -34,9 +34,13 @@
 为什么那些管理良好，锐意提高竞争力，认真倾听客户意见，积极投资新技术研发的企业却丧失了市场领导地位？
 
 - IBM1952-1956年研制了世界上第一个硬盘RAMMAC，其大小相当于一个超大冰箱，包含50个24寸硬盘，容量5M
+
 - 延续性技术变革
+
   - 铁氧体磁头 -> 薄膜磁头 -> 磁阻磁头（IBM、昆腾、希捷引领这一次技术变革）
+
 - 破坏性技术变革
+
   - 14英寸 -> 8英寸 -> 5.25英寸 -> 3.5英寸 -> 2.5英寸 -> 1.8英寸
   - 20世纪70年代，14英寸硬盘，容量130M，每年增长15%，用于大型机
   - 1978-1980，昆腾等公司推出8英寸硬盘，容量40M以内，大型机客户不感兴趣，他们需要300M以上，最终销往微型机市场
@@ -44,6 +48,8 @@
   - 1984年，Rodime研制出3.5英寸硬盘，容量20M以内，台式机客户不感兴趣，他们需要40M以上的，最终销往笔记本市场
   - 1989年，Prairietek推出2.5英寸硬盘，笔记本客户感兴趣，所有3.5英寸硬盘厂家都顺利推出2.5英寸硬盘
   - 1992年，1.8英寸硬盘上市，笔记本客户不感兴趣，最终销往便携式心脏监护装置市场，直到1995年销售额1.3亿美元的1.8英寸市场中，新兴企业占了98%的份额
+
+  ![创新者的窘境-1-1](/Users/jearry/StudyNote/images/创新者的窘境-1-1.jpg)
 
 ## 二、价值网络和创新推动力
 
@@ -239,16 +245,44 @@
 
 ## 十、管理破坏性技术变更：案例研究
 
-- 怎样判断某项技术是否具有破坏性
+- 怎样判断某项技术是否具有破坏性（电动汽车）
 
   - 首先绘制一张市场所要求的性能改善轨线
   - 并将其与技术能够提供的性能改善轨线进行比较
 
-  ![创新者的窘境-1-1](/Users/jearry/StudyNote/images/创新者的窘境-1-1.jpg)
+  ![创新者的窘境-10-1](/Users/jearry/StudyNote/images/创新者的窘境-10-1.jpg)
 
   - 观察用户如何使用产品能够提供更多可靠的信息
+  - 电动汽车的性能改善曲线在日后有可能与主流市场需求相交汇时，才能说是一种破坏性技术
 
-- 
+- 电动汽车的市场到底在哪儿
+
+  - 唯一有价值的信息就是，通过真正进入市场，通过测试和探索，通过反复尝试，通过向真正愿意掏腰包的实际客户销售实际的产品，我们能够从中得到些什么
+  - 强迫机构凭借自己的能力和智慧来求得生存，而不是变化不定的补贴
+  - 我的创业计划必须是一个学习的计划，而不是一个实施预先制定的战略的计划
+  - 必须为错误做好准备，并尽快了解什么才是正确的发展道路
+  - 我们需要保存实力，以备第2次或第3次尝试中找到正确的市场
+
+- 我们应该采取什么样的产品技术战略
+
+  - 首先，必须具有简单、可靠和便捷的特性
+  - 设计一个能够以较低成本迅速对产品的特色、功能和外形进行变更的产品平台
+  - 必须确定一个较低的定价点
+  - 从历史看，破坏性技术一直不涉及新技术，所采用都是经过验证的技术，组合起来合成一个全新的产品结构，并为客户提供一些他们之前从未体验过的新属性
+
+- 我们应该采取什么样的经销战略
+
+  - 传统的经销网络会屈从主流的价值网络
+  - 为电动汽车寻找新的经销网络
+  - 除非有确凿的证据证明我的想法是错误的
+
+- 什么样的机构最适合进行破坏性创新
+
+  - 设立一个独立的分支机构
+  - 一个独立的机构不但能使资源依赖理论为我所用，而不是阻碍项目的进程
+  - 较小的机构，较小的收益就能够激发员工的能量与热情
+  - 小型独立的机构，更容易培养对待失败的正确态度
+  - 可以推动我们通过反复尝试加快对新市场的培育进程
 
 ## 十一、创新者的窘境：概要
 
