--- a/谷歌的断舍离.md
+++ b/谷歌的断舍离.md
@@ -71,3 +71,56 @@
 - 众筹就是大家共同支持挑战者
 - 混乱的时代蕴藏着机遇
 - 现在这个时代，每个人都以低廉的价格使用威力无穷的计算机，因此个人的力量大大增强
+
+## 二、提升速度的必要条件
+
+### 1、跃跃欲试的劲头
+
+- 21世纪的行动指南
+  - 最初就着眼于国际市场
+  - 加快推进中国经济的优胜劣汰
+  - 不断刷新企业的经营方式、企业文化和商业习惯
+  - 员工少而精，重视伙伴关系
+  - 积极发挥群众的智慧
+  - 不走20世纪的老路
+  - 敢于质疑常识
+  - 高瞻远瞩、行事敏捷
+  - 关注人本身
+  - 天真烂漫
+- 在充满机遇的时代里要坚持“天真烂漫”
+  - 整个世界都在不断的变化，我们身处这扣人心弦、充满变化的时代，确实是让人兴奋的事
+  - 我们应该重视年轻人的奇思妙想和与众不同的行为模式，并且努力保持自己的那份天真和浪漫
+
+- 硅谷的“朝气”
+  - 在谷歌公司，如果有人提出有意思的提案，大家会就这个提案不断讨论、推进，甚至让人担心是不是太轻率了
+- 把无趣的世界变得有趣
+  - 不管任何事情，如果不尝试去做的话，就永远不知道结果
+
+### 2、“巧迟”不如“拙速”
+
+- 亲身实践的重要性
+  - 互联网的世界绝对不是单凭道听途说就能了解的，要想了解清楚，必须投身其中
+- “在运营过程中不断完善”的构想
+  - 工业产品上市前还是需要进行严格的质量和性能检查
+  - 计算机软件不存在研发完成一说，是在不断更新的，产品只要保证一定的完成度，就可以在运营的过程中不断完善
+- 汇集“群众的智慧”，兼顾速度和质量
+  - 用户会以不同于研发工程师的视角，对产品提出独到而犀利的意见
+- 领导层的速度差异事致命的
+  - 经营者控股的企业比那些职业经理人化的企业更善于发现机遇，整体步伐更轻快，决策也更迅速
+
+### 3、“全平面”管理
+
+- 开会时规定作为位置毫无意义
+- 减少组织结构中无用的阶层，尽可能将组织结构平面化、简单化
+- 优势员工的判断会比领导更出色
+  - 现场的负责人有时可能更加敏捷
+- 我来承担责任，你就放心大胆地干吧
+  - 不能压制年轻人新奇想法和行为模式
+  - 领导可以从大局的角度出发，给员工一些适当建议
+- 尽量减少会议人员
+  - 保证参加会议的人都是和会议相关人员
+- 舍弃“按自己想法控制员工”的念头，公司运营就会变得轻松不少
+  - 对他们所做的工作，要怀有感恩之心
+
+### 4、云端服务加深交流
+
