谷歌的断舍离完成

--- a/谷歌的断舍离.md
+++ b/谷歌的断舍离.md
@@ -124,3 +124,166 @@
 
 ### 4、云端服务加深交流
 
+- 创新源于交流
+  - 创新并非源于早晨醒来时的灵光一现，而是产生于跟别人的交流过程之中
+  - 总之要交流、交流、再交流，世上没有交流过度一说
+- 谷歌公司的互助文化
+  - 虽然有部门和上下级之分，但是基本上大家都是通过相互合作来完成工作的
+  - 从未收到“我现在很忙，过一会再来找我”这样的回复
+- 完全的信息共享能实现平面式的组织模式
+  - 同一部门或项目组的人，只要不是特别私人的东西，原则上大家都会共享所有信息
+  - 乍一看觉得繁琐，要想迅速实现平面式交流，这种做法是非常重要的
+  - 以垄断信息来确保自己的优越性，已经不适合网络社会
+  - 所有成员都了解其他成员所想之事和正在进行的工作，大家能够从不同的立场和角度及时给出恰当的建议和帮助
+  - 遇到问题或难题，要亮起警灯，向大家发出求救信号，让大家了解到你遇到的困难
+- 谷歌公司的褒奖文化
+  - 美国公司普遍擅长赞扬
+  - 下属受到批评后，不会想着要做的更好，只想着绝对不能失败，因而不敢冒险了
+  - 对失败的人说：”做得好，但是。。。“， “Nice try, but”，用鼓励的方式来引导他
+  - 谷歌有一种”对等奖金“的制度，这是为他人申请小额度奖金的制度
+    - 只要这个人给自己很大的帮助，或者因为有他默默努力公司变得越来越好，就可以帮他申请这个对等奖金
+- 使用云端服务的搞笑工作模式
+  - 开会同时使用在线存储服务，会议结束将会议记录分享给全员
+  - 同时推动组织模式平面化
+- IT让交流变得无机质
+  - 面对面交流才是交流的基本形式
+  - 多到生产第一线去核一项员工面对面交流
+    - 会听到平时听不到的东西
+
+### 5、扩展事业时的“少而精”原则
+
+- 建立一个自由豁达、轻松愉快的理想型工厂，以充分发挥勤勉认真的技术人员的技能
+
+  - 员工都要经过严格选拔
+    - 智商高低
+    - 以往工作业绩，对社会的贡献
+    - 领导能力
+    - 是否与公司文化相吻合
+  - 人员要少而精
+  - 避免形式上的职场等级制
+  - 公司内以实力说话
+  - 在尊重个人人格的基础上，最大限度发挥个人技能
+
+- 乔布斯是一个彻头彻尾执着于简洁的人（见《疯狂的简洁》）
+
+- 思考相同的员工数能不能完成双倍的工作
+
+- A等人才想的是：通过跟比自己优秀的人一起工作，能相互学习、共同成长
+
+- B等人才想的是：担心比自己优秀的人才加入团队之后，自己的优越性就体现不出来了
+
+- 创业企业需要能自力更生的A等人才
+
+  - 那些因为一点小事就低落疲惫的人完全不可用
+  - 真正的人才需要具备过人的胆量、忍耐力和体力
+
+### 6、用伙伴关系将全球联系起来
+
+- 建立伙伴双赢的关系
+  - 初创企业，除了创建一个小而精的团队，如何找到强有力的外部伙伴也显得尤为重要
+  - 越是大公司和小公司合作，越要多费心思向对方表示尊重
+    - 倘若把公司大小和个人能力混为一谈，采取蛮横的态度，有可能错失重要的机会
+
+- 汇集众多伙伴的智慧
+  - 现在是互联网、云端服务、社交媒体被广泛运用的时代
+  - 这个时代的精髓就在于通过互联网能将大家联接起来，大众的这种联接有助于获得各种各样的支持和帮助
+  - 要想通过众包或众筹利用大众智慧和支援，需要区分好“自己应该做到什么程度”、“哪些需要依靠大众的力量来完成”
+
+### 7、首先瞄准世界市场
+
+- 不了解自己的国家就别谈论全球化
+- 真正的全球化不是说用同样的价值观来统一世界，而是要熟悉每个地方的差异，从而开展融入当地的业务
+- 向世界宣传中国
+  - 那些得到世界认可的中国强项只存在中国的各片乡土之中
+
+## 三、应该事先掌握的“新世界的规则”
+
+### 1、除去心灵的沉渣
+
+- 你是否也执着于非本质的东西
+  - 在公司的地位和头衔
+  - 周围的评价
+  - 谁拥有单人办公室、配秘书、配了专车
+- 本质的东西
+  - 做别人不愿做的事
+  - 比别人先行一步
+  - 面向世界
+
+### 2、保持简单
+
+- 一直执着于简单的乔布斯
+  - 笔记本电脑只有MacBook Air和MacBook Pro，而dell有33种
+- 把商品战略也简单化
+  - 推行“少数精锐化”方针，使组织结构和商品战略简单化
+- “不敢舍弃”会变成风险
+  - 事物的要素累计的越多就越复杂，越难以理解
+  - 商品也一样，功能变得越来越多之后，就失去其特征
+  - 本来想要规避风险的行为，往往增大了风险
+
+### 3、“演绎式”地思考
+
+- 在脑海中描绘出未来的蓝图，在此基础上进行逆向推到，从而决定当前该做的事
+- 归纳式思维无法预测未来
+  - 处理好眼前的事，不断积累，最终达到某种目的的一种思维方式，和演绎式截然相反
+  - 归纳式换句话说就是漫无目标
+- 了解自我所必不可少的“20%时间制”
+  - 鼓励员工将20%的工作时间用于从事自己本职工作以外的事
+  - Gmail诞生于这个20%的时间制
+  - 人一旦过于忙碌，往往容易忘记思考自己做这份工作的本来目的以及本质意义
+
+### 4、不挑战的风险
+
+- 如今的大企业属于“高风险、低收益”吗？Yes
+  - 技术基础和社会基础均以完善
+  - 挑战的难度相比以前明显降低
+  - 大企业也难免面临裁员和降薪
+- 在大企业工作有利于自我发展吗？No
+  - 在大企业担当重任、处理大事的机会要比小企业低
+  - 在小企业工作，更能在短时间内培养出优秀的专业能力和坚强的意志
+
+- 改掉上班族的陋习
+  - 只能等待上级指示而无法自己做决定
+  - 无法适时明确地发表自己的意见
+  - 实现不切实际
+  - 遇到问题责怪别人而非自我反省
+  - 经常做非结果导向的无用功
+  - 需要很长时间才能进入工作状态
+  - 喜欢那年龄当借口
+    - 还年轻，没到时间
+    - 都这么大年纪了，逞什么强
+
+### 5、迈进新时代所必备的六大素养
+
+- 怀疑常识的能力
+  - 怀疑潮流
+  - 怀疑新闻
+  - 怀疑权威
+  - 比如：核能是安全的能源
+- 以地球为单位进行思考的能力
+  - 漂浮于太空中俯瞰整个地球的视角来构想世界
+  - 用地球展示产品在地球上的应用状况
+- 竞争意识
+  - 不要胆怯，敢于一决高下
+- 坚持己见的能力
+  - 
+- 讲故事的能力
+  - 产品背后没有一个故事，就无法打动人心
+  - 相比what和how，人们更会因为why产生共鸣而行动
+  - 具备演说能力的人，会首先、说why，其次是how，最后说明what
+- 专业意识
+  - 面对任何困难都能以平常心对待
+  - 它是直面逆境时被考验的东西
+
+### 6、聪明地思考、愚笨地做事
+
+- 能够聪明思考的人非常多，但是能够把自己所想之事坚持做到最后的人非常少
+- 甘认失败而放弃的人不是专业人士
+  - 面对困难，如果正面攻击无效时，努力寻找是否还有别的办法
+  - 要努力采取各种办法来尝试解决问题
+  - 向左不行就向右，向右不行就把天花板或地板凿开
+- 永远坚持why，随时舍弃how
+  - why是指目的，应该毫不动摇、愚笨的坚持
+  - how是指方法，可以中途放弃，更换其他方法
+
+  
+
