增加可复制的领导力

--- a/谷歌的断舍离.md
+++ b/谷歌的断舍离.md
@@ -110,9 +110,9 @@
 
 ### 3、“全平面”管理
 
-- 开会时规定作为位置毫无意义
+- 开会时规定座位位置毫无意义
 - 减少组织结构中无用的阶层，尽可能将组织结构平面化、简单化
-- 优势员工的判断会比领导更出色
+- 有时员工的判断会比领导更出色
   - 现场的负责人有时可能更加敏捷
 - 我来承担责任，你就放心大胆地干吧
   - 不能压制年轻人新奇想法和行为模式
