--- a/可复制的领导力.md
+++ b/可复制的领导力.md
@@ -132,3 +132,60 @@
   - 允许员工恋爱，配单间
   - 为员工父母发工资
   - 给离职员工发津贴
+
+## 三、构建游戏化组织，让工作变得更有趣
+
+伴随着互联网成长起来的新一代员工，金钱和梦想已经不是吸引他们工作的最重要的理由，让工作变得有趣或许是一个不错的方式
+
+### 1、设定明确的团队愿景
+
+- 愿景必须清晰而具体，并且足够宏大
+  - 要想打造一个指数型的组织，设定一个远大的愿景十分重要
+    - 指数型组织的核心就是撬动“杠杆资产”
+    - 宏大的愿景不仅每名员工都会感觉企业与自己有关，社会上的其他人也会觉得这个企业与自己息息相关，并愿意为企业提供更多帮助
+  - 樊登读书会：带领13亿人读书
+  - 谷歌：整合全球信息，人人皆可访问并从中受益
+  - Airbnb：四海为家
+  - PayPal：改善第三世界人民的生活
+- 全员参与梳理企业愿景
+  - 企业愿景不只是管理者的个人意志，还必须得到所有成员的认可
+  - 是大家共同努力的目标
+
+### 2、制定清晰的游戏规则
+
+- 海星模式：将员工打造为业务站点，企业的职责是为员工提供清晰而富有吸引力的规则
+- 韩都衣舍：3人一组，为每个小组提供启动资金10W，利润30%归公司，70%归小组执行安排
+
+### 3、建立及时的反馈系统
+
+- 腾讯的发奖文化
+  - 在腾讯工作，只有两件事：要么发奖，要么在去玩发奖的路上
+  - 巧立名目给员工发奖
+    - 独立完成任务：最佳成就奖
+    - 任务失败：最佳探索奖
+    - 减肥成功：最有毅力奖
+    - 做整容手术：最佳颜值奖
+  - 轻松愉悦的工作氛围对年轻人很有吸引力
+- 人类学角度分析
+  - 人是社会动物
+  - 原始人没有同伴很难存活
+  - 同伴的评价非常重要
+  - 员工如果不能获得及时反馈，会觉得自己不受重视，从而迷失努力的方向
+
+### 4、自愿参与的游戏机制
+
+- 员工喝企业相处建立爱自愿平等的基础上，管理者不应该采取任何强迫姿态
+- 《联盟》一书的核心价值，在于帮大家认清了两大谎言
+  - 管理者说的“好好干，我不会亏待你的”
+  - 员工说的“你放心，我会好好干的”
+- 企业和员工之间的联盟如何建立
+  - 找到自愿参与的人
+    - CEO参与招聘
+    - 找到具有“创意精英”这种素质的人
+      - 在工作中不夹杂个人情绪的员工为“创意精英”
+  - 为员工设定期望值（点燃工作激情）
+    - 你打算在公司工作多久？
+    - 你打算在这段期间做到什么职位？
+  - 用协议时刻提醒员工
+    - 通过了解员工的职业规划，企业与员工签订一份协议书，规定好任职期间各自的义务
+    - 用协议提醒员工而不是胁迫
