完成第五章

--- a/可复制的领导力.md
+++ b/可复制的领导力.md
@@ -174,7 +174,7 @@
 
 ### 4、自愿参与的游戏机制
 
-- 员工喝企业相处建立爱自愿平等的基础上，管理者不应该采取任何强迫姿态
+- 员工和企业相处建立爱自愿平等的基础上，管理者不应该采取任何强迫姿态
 - 《联盟》一书的核心价值，在于帮大家认清了两大谎言
   - 管理者说的“好好干，我不会亏待你的”
   - 员工说的“你放心，我会好好干的”
@@ -189,3 +189,125 @@
   - 用协议时刻提醒员工
     - 通过了解员工的职业规划，企业与员工签订一份协议书，规定好任职期间各自的义务
     - 用协议提醒员工而不是胁迫
+
+## 四、理清关系，打造团队一致性
+
+团队不应该称为家，而应该是一支球队，大家聚在一起是为了进步，为了赢得最终胜利。唯有如此，才能将团队打造成激烈商战中无坚不摧的铁军
+
+### 1、团队就是"球队"，目标就是赢球
+
+- 企业不是家
+  - 家庭是人的精神港湾
+  - 家庭成员不会因为表现不好而驱逐家门
+  - 家庭矛盾再激烈也不会影响即定关系
+
+- 随时随地向成员传递团队目标
+  - 员工离职时
+    - 虽然XXX能力可以，但是其工作方向和发展目标和我们整个团队不太一致，因此我们选择让他离开
+  - 发奖金时
+    - 你做的工作和团队的发展方向一致，因此值得得到奖励
+
+### 2、把你要员工做的事，变成他自己要做的事
+
+- 强化员工为自己工作的观念
+  - 工作是为了增加我的能力，我的接触，丰富我的经验
+  - 不是为公司工作，也不是为领导工作
+- 用共同的目标管理
+  - 不要让同事为你干活，要让他们为共同的目标干活
+- 适度有效的放权
+  - 每个人都有无限潜能，关键看你怎么去开发
+
+### 3、前员工是熟人，而非路人
+
+- 天下没有不散的筵席
+- 人和人之间的相聚本身非常短暂
+- 员工离职，不是背叛
+- 管理者对待前员工，应该想对待企业功臣一样，善待前员工
+  - 给现有员工的示范作用
+    - 前员工在团队成员中具有一定的人脉和影响力
+    - 员工永远对自己同事的遭遇感同身受
+    - 也会从同事遭遇中推断老板的性格
+  - 维护企业的口碑
+    - 前员工的化经常会一石激起千层浪，人们会想：
+      - 一个企业如何逼走为自己辛勤工作的员工
+      - 管理层是不是唯利是图
+      - 这样的企业值不值得合作
+      - 对待自己的员工都如此苛刻，何况其他人？
+  - 为企业带来新的发展机遇
+    - 员工离职后也在行业圈子里发展
+    - 企业的业务拓展多了一条熟路
+- 建立前员工联盟
+  - 每年邀请前员工聚会
+  - 分享业内合作机会
+  - 增进前员工与企业之间的联系
+- 投资创业员工
+  - 评估前员工的项目，争取为员工提供创业支持
+  - 帮助新项目获得成功
+
+## 五、用目标管人，而不是人管人
+
+目标是一切管理的基础和开始。
+
+对个人来说，目标是内心坚不可摧的精神支柱；
+
+对于企业来说，目标是推动企业发展的最大驱动力。
+
+### 1、企业管理，说到底就是目标管理
+
+- 什么是目标？
+  - 那种让人朝思暮想、时刻不忘，一想起就会热血沸腾的，才能叫目标
+- 团队目标包含三大类型
+  - 方向型目标
+    - 欧美国家的科技人员，为了研究出改变人类生活的新技术，可以默默耕耘十年甚至更长时间
+    - 有一种"活着就要改变世界”的信仰
+    - 中国企业家，首先考虑能挣多少钱，缺乏那种发自灵魂深处的激情、无畏和创造力
+    - 从长远来看，团队比的就是方向和规划，方向不对，努力白费
+  - 过程型目标
+    - 近期可以达到的效果
+    - 一般具有逻辑性、结构性，比如：今年一季度销售额优于去年同期
+    - 由中层领导基于战略性方向型目标正确拆分来制定
+    - 中层领导需要手机方方面面的资料作为参考
+  - 理性清晰的具体目标
+    - 销售额达到6000w
+    - 订单量突破2w
+    - 客户满意度100%
+    - 由基层领导制定
+
+### 2、目标管理的四大难题
+
+- 成员参与度不够，执行积极性不高
+  - 目标由领导拍脑袋设置，没有经过证实的调查研究
+  - 目标必须保证是全体团队成员共同参与下制定出来的
+    - 必须以团队成员为主导
+    - 必须进行充分的目标对话
+    - 管理者和员工在目标管理的过程中地位平等
+    - 目标得到双方认可
+- 资源匮乏
+  - 虽然资源是限制目标的一个因素，但它绝对不是最重要的
+  - 案例：联合国官员提高越南儿童营养健康水平
+- 目标拆分不合理
+  - 管理者的任务要确保各成员的目标和方向型目标一致
+  - 避免出现分目标完成而整体目标没有实现的情况
+    - 案例：Dell新CEO要求增加拨打电话次数的目标
+- 目标总在变化
+  - 理解企业决定
+  - 提前准备预案
+
+### 3、明确量化的目标才是好目标
+
+- SMART法则
+  - 明确具体
+  - 可量化
+  - 可接受
+  - 符合实际
+  - 有时间限制
+- 目标书写公式：目标 = 动词 + 任务 + 指标 + 目标
+
+### 4、目标管理的标准化
+
+- 第一步：利用公式写出目标
+- 第二步：列出阻碍目标的因素
+- 第三步：列出可以帮助目标实现的条件
+- 第四步：写下个人特征
+- 第五步：列出要做的事情
+
