--- a/可复制的领导力.md
+++ b/可复制的领导力.md
@@ -306,8 +306,51 @@
 ### 4、目标管理的标准化
 
 - 第一步：利用公式写出目标
+  - 企业短期内扭亏为盈
 - 第二步：列出阻碍目标的因素
+  - 频繁更换领导
+  - 核心业务十分模糊，无法为市场提供有竞争力的产品
+  - 财务制度混乱
+  - 新品牌在市场上没有知名度
 - 第三步：列出可以帮助目标实现的条件
+  - 在业界耕耘多年，原来老品牌号召力还在
+  - 公司拥有一批有多年业内工作经验的高层次人才
+  - 现有核心技术可以转化为部分现金
 - 第四步：写下个人特征
+  - 王总性格刚毅果断，得到董事会高度信任
 - 第五步：列出要做的事情
+  - 节流
+  - 开源
+  - 开发拳头产品
+  - 恢复老品牌
 
+## 六、利用沟通视窗，改善人际关系
+
+![可复制的领导力-6-1](/Users/jearry/StudyNote/images/可复制的领导力-6-1.jpg)
+
+### 1、隐私象限
+
+- 我知你不知
+- 可以部分公开，分为三个层次：
+- DDS
+  - DDS（deep dark secret）可不公开
+  - DDS越多，就会有很大的精神压力，甚至会患上焦虑症
+  - 书有未曾经我读，话无不可对人言
+- 不好意思说
+  - 暗恋
+  - 挑战者号升空73秒后爆炸
+  - 没有及时汇报，以致事态一发不可收拾
+- 忘了说
+  - 知识的诅咒
+    - 管理者以为某些事情员工应该知道，无需多说，所谓一切尽在不言中。
+    - 这些员工"应该知道的事情"，往往只是管理者的一厢情愿
+    - 这是团队沟通中最应该被重视的部分，被称为"知识的诅咒"
+    - 当我们对某件事情非常了解时，脑中存在很多专业知识时，就会转变表达方式，以至于说出来别人听不懂或难以理解，我们自己却认为已经说的很明确了，此时，我们便被自己的专业知识诅咒了
+    - 过去的知识成就了现在的你，也禁锢了现在的你，让你听不进去与自己认知不同的意见，让你不愿意挑战那些让自己不太舒服的领域
+    - 美国舒立茨啤酒广告：每一瓶舒立茨在罐装时，瓶口都经过高温纯氧吹制，这样才能保证口感清冽
+    - 企业必须对客户做一些深入调查，才能打破知识的诅咒，找到产品的卖点
+    - 《让创意更有黏性》列举了6个可以打破知识的诅咒的方法：简单、意外、具体、可信、情感和故事
+  - 爱的诅咒
+    - 父母心中有一个巨大的前提：无论孩子成绩怎么差，父母都不会抛弃他，会一直支持他
+    - 孩子心里没有这个前提
+    - 所以如果经常数落孩子，孩子会对自己的价值产生深深的怀疑
