--- a/可复制的领导力.md
+++ b/可复制的领导力.md
@@ -326,11 +326,14 @@
 
 ## 六、利用沟通视窗，改善人际关系
 
+人际沟通的信息就像一扇窗，分为四个象限，有效沟通就是这四个象限的有机融合
+
 ![可复制的领导力-6-1](/Users/jearry/StudyNote/images/可复制的领导力-6-1.jpg)
 
-### 1、隐私象限
+### 1、隐私象限：正面沟通，避免误解
 
-- 我知你不知
+自己知道别人不知道
+
 - 可以部分公开，分为三个层次：
 - DDS
   - DDS（deep dark secret）可不公开
@@ -354,3 +357,150 @@
     - 父母心中有一个巨大的前提：无论孩子成绩怎么差，父母都不会抛弃他，会一直支持他
     - 孩子心里没有这个前提
     - 所以如果经常数落孩子，孩子会对自己的价值产生深深的怀疑
+
+### 2、盲点象限：利用反馈看到自身局限
+
+自己不知道，但是别人知道
+
+- 孟子：闻过则喜
+- 大禹：闻善则拜
+- 闻过则问
+
+### 3、潜能象限：不要轻视每一名员工的潜能
+
+自己和别人都不知道
+
+- 澳大利亚的力克，生来没有四肢，却成为励志大师
+- 巴菲特偶像B夫人：即使明天是世界末日，我也要在花园里种满莲花
+- 论语：朝闻道，夕死可矣
+- 团队管理的重要原则：赛马不相马，人人是人才
+- 重要的是管理者创造一种公平竞争、积极向上的氛围，重视赛马机制的建立
+
+深入思考两个问题：
+
+- 是否充分调动了员工的积极性
+- 是否为员工的能力提升提供很好的规划和培训
+
+一个好的团队，就是让团队的80%的人都能得到80分
+
+- 一个人的成就由两个因素促成的，一个是能力，一个是意愿
+- 有些员工工作不行，但是游戏能力强、歌唱的很好，其实是潜能没有发挥出来而已，管理者需要找到束缚能力发挥的源头，激发员工的潜在意愿
+
+### 4、公开象限：让员工尊重你，而不是怕你
+
+自己和别人都知道
+
+- 靠成员怕来约束的行为叫管理
+- 靠成员尊重和信任来约束的行为才叫领导
+
+一个人有足够大的公开象限，就会拥有优秀的领导力
+
+- 将隐私象限转化为公开象限
+  - 将你不好意思说，或者忘记说的内容向员工做自我揭示
+- 将盲点象限转化为公开象限
+  - 恳请反馈
+  - 客户和员工的反馈就变得异常重要，唯有如此，才能及时发现自己的问题，提升团队战斗力和凝聚力
+  - 万科的优秀销售话术从客户反馈得来：销售话术可复制，口语化
+
+## 七、学会倾听，创建良好的交流通道
+
+倾听是沟通的基础，善于倾听的人才能当个好领导。倾听不能止于听，在听的过程要对信息进行解析，并给出积极的回应
+
+### 1、用心倾听，建立员工的情感账户
+
+- 虽然身居高位，但从善如流，最后开创一代伟业
+- 刘邦：自知才疏学浅，文不如张良，武不如韩信，安抚百姓、调度粮草不如萧何，可他却非常善于采纳他人的建议，身边的能人都可以充分发挥作用
+- 在一些企业，很多人愿意为领导赴汤蹈火，因为员工觉得领导尊重并信任他们，随时随地愿意倾听他们的意见，并真心为他们着想
+- 通过认证倾听的方式，管理者和员工建立起情感账户，并且存入了数额不菲的资金；这样做之后，管理者由于某件事情批评员工的时候，员工就不会轻易生气，反而觉得管理者是真心为他好，这种批评可以接受
+
+### 2、倾听的要点是吸收对方的信息
+
+沟通学有一个原理：两人谈话时，5秒之后，倾听者实际一直在构思自己要说的话，导致对方的话大部分都没有听清，善于沟通的人也只是将这个时间延长到30秒左右。
+
+倾听的三个步骤：
+
+- 深呼吸
+  - 尤其是当听你并不爱听的话的时候，深呼吸会很好的平复你的情绪
+  - 可以清除私心杂念，放下偏见，只留下平静的心为接下来的倾听做好准备
+- 提问
+  - 善于在倾听中提问，会让对方感受到尊重，更容易赢得信任，这是领导力产生最重要的基础
+  - 提问分为两种：
+    - 封闭性问题：只能用"是"或者"不是"回答；7Yes成交法
+    - 开放性问题：需要对有关事情做进一步描述，它会让谈话者思维更加活跃
+- 复述
+  - 沟通漏斗：心里想的是100%，80%实际说出来，60%被听到，40%听懂了，三天后剩20%，三个月后剩5%
+  - 管理者布置任务，最好养成习惯让对方复述一遍，以保证信息的绝对正确，避免出现严重的工作疏漏
+
+### 3、肢体动作比语言更重要
+
+倾听不只是说出来的话，肢体动作、声调、表情也非常重要
+
+- 有的FBI员工退休后，会成为企业的商业顾问，用于谈判时观察肢体动作并加以解读，协助公司做出决策
+- 肢体语言是我们原始祖先最早使用的交流方式，随后出现口头语言，最后才出现书面语言
+
+- 书面语言
+  - 出现的最晚
+  - 表达方式冷静客观
+  - 内容经过人们反复核实确认
+  - 最容易掩饰人们的真情实感
+- 口头语言
+  - 直接
+  - 带有强烈的主观色彩和及时性
+  - 不会做太多修饰
+  - 比书面语言更可信（仍存在务虚的因素，比如客套话）
+- 肢体语言
+  - 是下意识的，除非经过刻意练习，否则任何人都无法控制和修改自己的肢体语言
+  - 是最真实的
+
+以下是管理者额外需要重视的肢体语言
+
+- 目光接触
+  - 如果员工在交谈时始终将视线集中在管理者身上，说明他很尊敬上级，对所谈及的问题也十分重视
+  - 如果员工不正视管理者的目光，说明员工对谈论的话题不感兴趣
+- 手势
+  - 一个人撒谎的时候，会抚摸自己的安慰区，女性的安慰区为胸口，男性为脑后
+  - 此外，耸肩、摸鼻子、抓痒、快速眨眼也是非常明显的说谎标志
+- 腿部动作
+  - 腿部放松：说明他此刻心里比较放松
+  - 二郎腿，同时手交叉在前：生气或反对管理者的观点
+  - 抖腿：说明他处于紧张焦虑的状态
+- 空间距离
+  - 亲人爱人：小于45cm
+  - 熟人朋友：46-120cm
+  - 社交距离：120-360cm
+  - 与员工交谈，一般在适用于工作场合的社交距离：120-360cm，如果交谈中距离变远了，说明他不同意你的观点
+
+9种常见的错误肢体语言
+
+- 无精打采
+  - 厌倦，不想继续交谈
+- 夸张的手势或点头
+  - 正在夸大事实
+- 说话看着手表、坐立不安或拨弄头发
+  - 有更重要的事情处理，想赶快结束
+- 交叉双臂或紧握拳头
+  - 防御姿态，暗示你并非持有完全开放的态度
+- 言语和面部表情不一致
+  - 会让对方怀疑你在欺骗他
+- 避开对方目光
+  - 让对方觉得你对他说的内容不感兴趣，给对方造成疏离感
+- 过于强烈的眼神接触
+  - 让对方觉得你好斗或试图占据主导地位
+  - 眼神接触平均为7-10秒
+  - 倾听应该比说话接触时间稍长
+- 转动眼珠
+  - 对谈话对象缺乏尊重
+- 皱眉或其他不开心的表情
+  - 想员工传递你正处于心烦意乱的状态
+
+### 4、用认同化解对方的情绪失控
+
+- 碰到对方情绪失控时，更有效的处理方式是"反映情绪"，所谓反映情绪是指通过一系列询问，让对方认识到自身的情绪状态
+
+- 通过让对方说是，情绪就会缓和下来，因为他从回答中找到了认同
+  - 这件事让你很心烦，是吗？
+  - 这件事让你很难过，是吗？
+  - 这件事让你很悲伤，是吗？
+- 认同观点和认同情绪是有区别的
+- 一切所谓艰难的谈话，最难过的往往是第一关，即认同对方的情绪，过不了这一关，什么沟通技巧都没办法起作用
+- 管理者一旦认可了员工的情感，就能让员工在团队中获得归属感，这种归属感是团队凝聚力的重要来源，也是团队建设中至关重要的内容
