完成可复制的领导力

--- a/可复制的领导力.md
+++ b/可复制的领导力.md
@@ -296,11 +296,11 @@
 ### 3、明确量化的目标才是好目标
 
 - SMART法则
-  - 明确具体
-  - 可量化
-  - 可接受
-  - 符合实际
-  - 有时间限制
+  - Specific [spə'sɪfɪk] 明确具体
+  - Measurable ['meʒrəbl] 可量化
+  - Attainable [ə'teɪnəbl]可接受
+  - Realistic [rɪə'lɪstɪk]符合实际
+  - Time-limited 有时间限制
 - 目标书写公式：目标 = 动词 + 任务 + 指标 + 目标
 
 ### 4、目标管理的标准化
@@ -504,3 +504,173 @@
 - 认同观点和认同情绪是有区别的
 - 一切所谓艰难的谈话，最难过的往往是第一关，即认同对方的情绪，过不了这一关，什么沟通技巧都没办法起作用
 - 管理者一旦认可了员工的情感，就能让员工在团队中获得归属感，这种归属感是团队凝聚力的重要来源，也是团队建设中至关重要的内容
+
+## 八、及时反馈，让员工尊重你、信任你
+
+激励可以让员工业绩倍增，训斥会让员工陷入低迷，不同的反馈技巧结果千差万别。
+
+能够接受和给予反馈，是管理者保持竞争优势的关键能力。
+
+### 1、别用绩效考核代替反馈
+
+- 管理工作最重要的是与员工之间的沟通
+- 管理者的任务就是帮助员工去完成任务，做好平日里的辅导，而不是在他不达标的时候惩罚他
+- 用冰冷的数据和指标来衡量严工的工作，伤害的是员工的积极性，牺牲的是企业的发展时间，对企业有百害而无一利
+- 员工需要通过反馈来总结过去、指导未来，管理者需要给与员工及时反馈来保证团队的方向始终一致
+- 如何建立与员工之间的尊重和信任
+  - 通过正面反馈，培养员工的自尊心，达到让其自律的目的
+  - 如果做对了没有反馈，会让员工怀疑自己是不是做得不好，对自己产生较低的评价，之后的工作容易畏头畏尾
+  - 自律性和自尊心是正相关的关系
+  - 为什么我们总是像看到别人的缺点？
+    - 这是人的本能
+    - 作为优秀的管理者，需要压制这种本能
+    - 善于发现员工身上的发光点，表扬并强化它
+  - 员工会在不断的积极反馈中，明确自己的工作方向，更有勇气和力量承担绩效考核的结果
+
+### 2、警惕"推理阶梯"，避免误解和伤害
+
+- 日常生活中，个人判断的大部分基于自身的主观认识而非事实，这会产生许多误会
+- 推理能力是人天生的能力，但并非每次推理的结果都是正确的
+- 要经过了解，才为某一个结果定性
+- 大量的团队矛盾根源都在于我们习惯用自我推理而非沟通来解决问题
+
+推理的步骤
+
+- 收集数据
+- 选择性的接受数据
+  - 不管你愿不愿意承认，"选择性接受"才是我们大脑处理信息的固有方式
+  - 顺眼的人越看越顺眼，讨厌的人越看越讨厌。也是这个道理
+- 赋予意义，得出结论，采取行动
+  - 我们做决定前，一定要问一下自己：这有没有可能只是一个推理，实际情况并非如此？
+  - 销售员贪污事件：学员退费后，却继续上课，然后，校长亲口问过销售员，确认学员已退费，校长联想到销售员最近买房，手头紧，然后判定销售员贪污；实际是销售员记错了学员的名字。
+
+### 3、通过正面反馈，引爆你的团队
+
+- 零级反馈：无动于衷
+  - 人是群居动物，每个人都希望得到来自群体的反馈和认可
+  - 无动于衷的反馈是完全无效的管理方式，会让员工消极怠工
+- 一级反馈：给予赞扬
+  - 公开、正面的口头表扬会让员工明确以后的工作方向，深刻认识到工作的意义
+  - 不要将员工的每一个正确的行为都跟钱挂钩，会起反作用
+    - 衰减：金钱如果不能持续增加，人们对它的兴趣就会迅速降低？？？
+    - 腐蚀：金钱会让很多事情丧失其原本的意义，让一部分追求精神层面意义的人自动远离
+      - 优秀的企业文化让员工感觉自己身上背负着强烈的使命感，会有一种内在的精神动力在驱使他
+      - 《华为基本法》价值分配有这么一项内容：华为实行员工持股制度，主张在顾客、员工与合作者之间结成利益共同体。
+- 二级反馈：表扬他，并告诉他原因
+  - 管理者的终极任务是通过各种手段塑造员工的行为
+    - 和负反馈相比，正反馈是塑造行为的最佳时机（小白鼠被电的例子）
+    - 员工做对了事，管理者表扬了员工，员工就会知道这样做是对的，以后还会继续这样做，如此一来，管理者需要操心的事情就又少了一件
+  - 给员工正面反馈的另一个作用，就是为团队营造独特的价值观以及团队文化，增强团队凝聚力
+
+### 4、负面反馈，对事不对人
+
+- 为避免员工情绪反弹，管理者对员工进行负面反馈时，通常采用三明治式反馈模式
+  - 表扬员工平时工作做的不错
+  - 指出现阶段工作中存在的问题
+  - 告诉员工改进之后会达到的成就
+  - 缺点：员工会选择性的接受表扬性的词汇，将真正需要反思的问题抛诸脑后
+- 负面反馈不可或缺
+  - 避免使用带有明显主观色彩的词汇："你总是"、"你从不"
+    - 不符合事实
+- 负面反馈流程：
+  - 1、准备事实
+  - 2、谈话
+    - 设定情景
+      - 说明谈话的主题
+    - 给予反馈
+      - BIC（Behavior Impact Consequence），事实影响后果
+      - B事实（避免使用主观词汇）
+      - I影响（对周围的人和事产生的影响）
+      - C后果（长期持续会引起的负面效果）
+      - BIC过程中，不提问，员工就会明白，管理者不是针对他个人，而是想要对工作负责
+    - 鼓励和倾听
+      - 人在自信的时候才会用于承担属于自己的责任
+      - 不自信的时候，就会觉得周围的人都在针对他，从而不愿意承认自己的过失，拒绝承担相关责任
+      - 当员工出现情绪问题时，需要更多精力放在鼓励和倾听上
+    - 商讨改变
+      - 需要让员工更多发表意见，唯有如此，在以后的工作中，才会有意愿去执行自己承诺的改变
+      - 优秀的管理者会把谈话的成就感归功于员工，而非自己
+  - 3、行动总结（如果涉及团队整体利益则需要）
+    - 只有把目标落实到行动上，目标才有实现的可能
+  - 4、跟踪计划（如果涉及团队整体利益则需要）
+    - 需要经常和员工交流沟通，监督方案的实施过程，就目前的工作给出合理的意见
+- 正面反馈和负面反馈的最佳比例是4:1，这种情况下，团队氛围比较和谐
+
+## 九、有效利用时间，拒绝无效努力
+
+管理者只有科学地安排好事物的处理顺序，才能使工作效率提高成为可能；
+
+涉及团队协作时，管理者要有激发成员热情和创意的能力，以提供整体决策的效率和质量。
+
+### 1、把时间用在关键要务上
+
+- 管理者主要任务是分清主次，找到团队当前阶段的努力方向；
+  - 哪些是与公司发展前景密切相关的关键事件，应该受到足够的重视；
+  - 哪些看似重要，但在人手有限的情况下，可以缓缓再做
+  - 物来则应，过去不留
+- 管人和理事分别属于重要不紧急、重要且紧急的范畴
+  - 管理才能是以员工是否获得成长来评判的
+  - 管理者最重要的任务是培养和带领员工成长
+  - 一般管理者80%时间用于处理重要切紧急的事情
+  - 一个高效的管理者70%时间用于处理重要但不紧急的事情
+  - 是否愿意花更多时间在管人上，也成为管理者效能高低的重要衡量标准
+
+- GTD（Getting Things Done）通过工具来防止瞎忙的情况出现
+  - 收集
+    - 将所有应该去做的事情罗列于"代办事宜”中
+  - 整理
+    - 将"代办事宜"进行分类，分为"可立即完成"与"不可以立即完成"
+    - 对于可立即完成的事项立即处理，清空任务
+    - 对于不能立即完成的事项，进入下一步组织环节
+  - 组织
+    - 行动清单（下一步具体的行动，地点时间）
+    - 等待清单（委派别人去做的工作）
+    - 未来清单（延迟处理，未设置具体完成时间的计划）
+  - 回顾
+    - 每周都要进行清单回顾、检查和更新的步骤，确保GTD系统正常工作，保证下周计划正常进行
+  - 执行
+    - 按照清单开始行动
+
+### 2、告别气氛沉闷、效率低下的会议（头脑风暴）
+
+人类思维有其自身局限，很难人为克服，头脑风暴恰能对此进行弥补
+
+人类思维的局限
+
+- 惰性
+  - 一个人提出一个解决方案，大家都说可以，并没有仔细分析透彻，就去做了
+  - 这样决定之后，往往放弃了继续寻找更有效的解决方式的努力
+  - 找到一个解决方案，代价是扼杀了创造更好结果的其他可能性
+- 局限性
+  - 受限自身的成长经历、知识水平等因素，我们的思维都有很大的局限性
+
+头脑风暴流程
+
+- 确定具体问题
+- 构思后各自陈述
+- 对意见不批评，否定意见暂时保留
+- 不宜超过15人
+- 最好请一个局外人，可以带来更加新鲜的视角和方案
+- 让团队各成员都能从中获得参与感，以便收集更多更好的想法
+
+### 3、如何正确又高效地做决策（六顶思考帽）
+
+- 白色思考帽
+  - 白色代表：中立而客观
+  - 需要将精力集中于客观的数据和事实
+- 绿色思考帽
+  - 绿色代表：创造力和想象力
+  - 需要用跳跃性的创意思维进行思考，为可能的风险和困难情况想出一些新点子
+- 黄色思考帽
+  - 黄色代表：价值与肯定
+  - 需要人们从正面考虑问题，表达乐观的、满怀希望的、建设性的观点
+- 黑色思考帽
+  - 黑色代表：否定与怀疑
+  - 需要人们运用否定、怀疑、质疑的看法，合乎逻辑地进行批判，尽情发表负面意见，找出逻辑上的错误
+- 红色思考帽
+  - 红色代表：情感
+  - 需要人们说出自己的直观判断，这件事是否可行，不必阐述原因
+- 蓝色思考帽
+  - 蓝色思考帽负责控制和调节思维过程，是会议的主持
+  - 六顶思考帽的循环使用，可以让团队成员成为一个战壕里的占有，一起看到项目的优势和缺陷，一起为项目的完成想办法
+
