--- a/创新者的窘境.md
+++ b/创新者的窘境.md
@@ -1,6 +1,6 @@
 # 创新者的窘境
 
-![创新者的窘境](/Users/jearry/StudyNote/images/创新者的窘境.jpg)
+![创新者的窘境](images/创新者的窘境.jpg)
 
 ## 零、引言
 
@@ -49,11 +49,11 @@
   - 1989年，Prairietek推出2.5英寸硬盘，笔记本客户感兴趣，所有3.5英寸硬盘厂家都顺利推出2.5英寸硬盘
   - 1992年，1.8英寸硬盘上市，笔记本客户不感兴趣，最终销往便携式心脏监护装置市场，直到1995年销售额1.3亿美元的1.8英寸市场中，新兴企业占了98%的份额
 
-  ![创新者的窘境-1-1](/Users/jearry/StudyNote/images/创新者的窘境-1-1.jpg)
+  ![创新者的窘境-1-1](images/创新者的窘境-1-1.jpg)
 
 ## 二、价值网络和创新推动力
 
-![创新者的窘境-2-1](/Users/jearry/StudyNote/images/创新者的窘境-2-1.jpg)
+![创新者的窘境-2-1](images/创新者的窘境-2-1.jpg)
 
 技术S曲线：技术发展的早期，性能提高的速度相对比较缓慢；随着人们对技术的理解逐渐加深，控制力度逐渐加强，应用范围更加广泛，技术改进的速度将会不断加快；但在成熟阶段，这项技术将逐渐接近自然或物理极限，需要更长的时间才能实现改进。
 
@@ -230,7 +230,7 @@
 - 开发者观察用户如何使用产品，而不是询问
 - 为客户提供足够的功能，而不是超强的功能
 
-![创新者的窘境-9-1](/Users/jearry/StudyNote/images/创新者的窘境-9-1.jpg)
+![创新者的窘境-9-1](images/创新者的窘境-9-1.jpg)
 
 性能过度供给的企业选择的战略性方法：
 
@@ -250,7 +250,7 @@
   - 首先绘制一张市场所要求的性能改善轨线
   - 并将其与技术能够提供的性能改善轨线进行比较
 
-  ![创新者的窘境-10-1](/Users/jearry/StudyNote/images/创新者的窘境-10-1.jpg)
+  ![创新者的窘境-10-1](images/创新者的窘境-10-1.jpg)
 
   - 观察用户如何使用产品能够提供更多可靠的信息
   - 电动汽车的性能改善曲线在日后有可能与主流市场需求相交汇时，才能说是一种破坏性技术
