--- a/可复制的领导力.md
+++ b/可复制的领导力.md
@@ -1,6 +1,6 @@
 # 可复制的领导力
 
-![可复制的领导力](/Users/jearry/StudyNote/images/可复制的领导力.jpg)
+![可复制的领导力](images/可复制的领导力.jpg)
 
 ## 一、80%的管理者能达到80分
 
@@ -103,7 +103,7 @@
 
 管理者在团队中有三种角色定位：
 
-![可复制的领导力2-1](/Users/jearry/StudyNote/images/可复制的领导力-2-1.jpg)
+![可复制的领导力2-1](images/可复制的领导力-2-1.jpg)
 
 - 下层执行：使命必达
   - 初级管理者以执行为重，无论遇到什么情况，都要保证最后的结果
@@ -328,7 +328,7 @@
 
 人际沟通的信息就像一扇窗，分为四个象限，有效沟通就是这四个象限的有机融合
 
-![可复制的领导力-6-1](/Users/jearry/StudyNote/images/可复制的领导力-6-1.jpg)
+![可复制的领导力-6-1](images/可复制的领导力-6-1.jpg)
 
 ### 1、隐私象限：正面沟通，避免误解
 
