增加墨菲定律

--- a/哈佛商学院最受欢迎的领导课.md
+++ b/哈佛商学院最受欢迎的领导课.md
@@ -1,24 +1,58 @@
 # 哈佛商学院最受欢迎的领导课
 
-## 零、领导力不是什么都懂，而是有勇气提出关键问题
+## 零、领导力不是什么都懂
+
+```
+领导力不是什么都懂，而是有勇气提出关键问题
+```
 
 ## 一、设定愿景和要务
 
 ```
 使命：
-让家庭生活变得更容易。
+	让人人皆可享受智能家居生活
 
+	致力于改善人居环境
+
+	让家庭生活变得更容易
+
+	改善每个家庭生活品质
+	
+	享受科技智能家居生活
+	
+	让一亿家庭享受智能家居生活
+	
+	让智能家居生活进入每一个家庭
+	
 愿景：
-成为智能家居行业的领军企业。
+	成为客户首选、员工自豪、同行尊重、社会认可的企业
 
+	成为智能家居行业的领军企业。
+
+    成为值得用户信赖的行业领军企业
+
+	中国智能家居首选品牌
+	
+	成为用户首选的智能家居领军企业
+	
+	成为值得用户信赖的智能家居领军企业
+	
+	成为智能家居行业值得用户信赖的首选品牌
+	
 价值观：
-诚信正直、敬业担当、高效专业、创新务实、追求卓越。
+	以客户为中心；以奋斗者为本；长期艰苦奋斗；批评与自我批评；终身学习
 
+	诚信正直、敬业担当、高效专业、创新务实、追求卓越
+
+	聚焦用户、合作开放、创新务实
+   
+	诚信，敬业，创新，务实
+	
 目标：
-为一亿人提供改善家庭生活的产品和服务。
+	为一亿人提供智能家居产品和服务
 
 经营理念：
-在追求全体员工物质和精神幸福的同时，为智能家居行业的发展做出贡献。
+	在追求全体员工物质和精神幸福的同时，推动智能家居行业的发展
 ```
 
 
