--- a/重新定义公司.md
+++ b/重新定义公司.md
@@ -6,7 +6,7 @@
 
 - 谷歌的“痴心妄想”：自由地从基本物理学原则出发思考问题，不必去迎合那些所谓的“世俗智慧”
 
-- 实际上，要点燃团队的也行是极其困难的：大多数人习惯用“不可能”来否定自己的想法，而不是从基本物理原则去探索可能性
+- 实际上，要点燃团队的野心是极其困难的：大多数人习惯用“不可能”来否定自己的想法，而不是从基本物理原则去探索可能性
 
 - 谷歌投入大量精力去物色善于独立思考的人，并设定远大的目标，因为只要有了合适的人才和足够远大的梦想，你的目标往往就可以实现；就算跌倒，你也可能会从失败中得到宝贵的教训
 
