--- a/墨菲定律.md
+++ b/墨菲定律.md
@@ -151,3 +151,109 @@
 - 设法取得权威人士的认同，有可能让你逐渐变成“权威”
 - 推广某种产品或观念时，不妨首先先权威人士推荐，他们接受后，民众就很容易接受
 
+## 18、布朗定律--找到心锁，打开成功沟通的大门
+
+布朗：一旦找到打开某人心锁的钥匙，就能够反复打开他的心锁，找到心锁是良好沟通的开始，知道别人在一什么，别人的意愿才能在你的把握之中
+
+- 看对方最重视什么？是物质上的享受，还是家庭生活的圆满，还是理想的实现
+- 看他平日经常为什么而烦恼
+
+## 19、邻里效应--近朱者赤近墨者黑
+
+社会环境可以影响人的思想和行为方式
+
+- 与人交往时，尽量增加“惺惺相惜”、“同病相怜”的感觉
+- 把自己的位置放在与他人相邻而不是对立的立场上
+- 保持良好的情绪和高尚的行为，能够让你交到更多高尚的朋友
+
+## 20、自己人效应--成为自己人，更易获得信任
+
+当你办事时，对方是你朋友或者有过数面之交的人，事情就会特别顺利
+
+“自己人”其实是指和自己有感情的人，或者同一类型、站在同一立场的人
+
+- 平等待人，不要颐指气使
+- 真正对他人感兴趣
+- 显示自己的才华魅力
+
+## 21、点滴关心汇聚真情，累计情谊赢得真心
+
+每个自觉受重视的人，都会对重视自己的人产生更多的感激和情谊
+
+只有重视才会引起重视，只有喜欢才会引起喜欢
+
+- 平时要对他人展现自己的关切之情，问候、关心都要真心诚意、热情洋溢
+- 在别人处于逆境或情感最脆弱时对他关切，最能引起他的共鸣
+- 人们的关注会变成自己的力量，尽可能赢得更多人对自己的关注，对成功有很好的促进作用
+
+## 22、与其锦上添花，不如雪中送炭
+
+边际递减效应：物品的价值并不取决于物品本身，而是通过自己的需求、欲望得到满足的程度来主观体现的。
+
+同一样东西给我带来满足感和效用会随着它的增加而使饿的效果递减，越到最后效果越小
+
+- 昔日英雄落难，不妨雪中送炭
+- 别人危难时，即使不伸出援手，也千万不要落井下石
+- 不要持续资助任何人，否则只会让他人产生依赖性
+
+## 23、成全别人的好事，让对方对你心存感激
+
+- 成全别人并不是一件容易的事，成人之美需要有宽广的心胸、长远的眼光，能够接受别人比自己优秀
+- 永远不要对别人的计划泼冷水，适当鼓励和支持也能够成全别人，赢得他人好感
+
+## 24、牢骚效应--做好的倾听者，让对方发泄不满情绪
+
+每个人对生活或工作都有一定程度的不满，而愿意听别人抱怨的人却不多
+
+- 认真倾听对方的牢骚，能够使事情办的更加顺利
+- 引导对方说出他对现状的不满，可以增加两个人之间的亲密度
+- 允许员工宣泄，可以激发员工活力并能防止矛盾激发
+
+## 25、巴纳姆效应--客观真实的认识你自己
+
+每个人都容易相信一个笼统的、一般性的人格描述特别适合自己，即使他非常空洞，仍有人认为则反映了自己的人格面貌
+
+- 想要明白自己的真实处境，就要学会客观观察，而不要受别人影响
+- 学会面对自己，客观评价自己的优点和缺点
+
+## 26、皮·格马利翁效应--如果你想飞，就要相信自己能飞
+
+皮·格马利翁喜爱雕塑，用象牙倾心雕塑了一个美女雕像，取名“盖拉蒂”，不久发现自己爱上了这个雕塑，祷告期望雕像复活，上帝被感动，雕像获得了生命，成为他的伴侣。
+
+期望和赞美创造奇迹。
+
+- 如果对某一个人有一个希望，就按那个标准去也要求他，把它按照那种人来对待，就会激发他的潜能，成为你希望成为的人
+- 多给予别人称赞会温暖别人的心，使之变得更加优秀
+- 管理者对于事情的预想期待，要用肯定性的语言去描述
+
+## 27、韦奇定律--用心理暗示让对方动摇内心
+
+韦奇：即使你有了主见，但如果10个朋友的看法和你相反，你就很难不动摇
+
+- 凡事要有自己的主见，不要因为旁观者的议论而产生退意
+- 根据事实做出自己的决策，并始终忠实于自己的选择，才可能成就伟大的事业
+
+## 28、多使用暗示之道，让自己占据心理优势
+
+人们会不自觉地维护自己的“自主”地位，不愿意接受别人的干涉或者控制。
+
+从这个角度来讲，暗示往往比指示、命令或直接劝说产生的效果更好。
+
+包括：感染式暗示（讲故事睡觉）、期待式暗示（权威、望梅止渴）、幻想后果式暗示（前车之鉴、曹操立太子）
+
+- 用自己的话感染他人的情绪，可以让对方迅速接受暗示，照你的话去做
+
+## 29、投射效应--当对方与自己相像时，不妨推己及人
+
+人们往往以己度人，认为自己具有的某种特性他人也一定会有与自己相同的特性，从而把自己的感情、意志、特性都投射到他人身上的认知倾向
+
+- 听听一个人眼中的世界、眼中的他人是什么样子，往往能够明白他的性格是怎样的
+- 结论会有误差，谨慎使用，根据事实做出调整
+
+## 30、反弹琵琶--对有逆反心理的人要突破常规对待
+
+把原本要批评的过错不予批评，而是充分肯定或表扬其长处，使之进行反省，进而认识错误，改正过错的现象。
+
+- 人们犯错后都有一个“愧疚”心理，一旦得到批评，他的心理包袱就放下了，“愧疚”心理也就随之消除，效果反而不佳。
+- 对逆反心过强的人方面的暗示反而比直接的鼓励和命令或禁止更有效
+
