--- a/墨菲定律.md
+++ b/墨菲定律.md
@@ -257,3 +257,34 @@
 - 人们犯错后都有一个“愧疚”心理，一旦得到批评，他的心理包袱就放下了，“愧疚”心理也就随之消除，效果反而不佳。
 - 对逆反心过强的人方面的暗示反而比直接的鼓励和命令或禁止更有效
 
+## 31、对待犹豫不决的人，不妨推他一把
+
+- 对于犹豫不决的人，推他一把，告诉他哪个更合适，把最终决定权的权利交给他
+- 作为这类人的朋友，建议永远比分析重要
+
+## 32、对于贪心的人，学会跟他讨价还价
+
+- 在让着对方之前，一定要让对方意识到，这种便宜是你故意让给他的，而不是他应该得到的
+- 让对方看到你的底线，而且你有随时反悔的可能，对方就会抱紧那点小便宜快快逃开
+
+## 33、面对疑心重重的人，多给予其安全感
+
+- 要想去除别人的疑心，就要千方百计让他有安全感，不让其感到威胁，自然就会对你信任有加了
+- 越是和敏感多疑的人谈话，越应该直视对方，话语坦诚，申请不能躲避，方能减少对方的疑心
+
+## 34、过度理由效应--不给出足够的外部理由可协助你达成愿望
+
+- 要想达成愿望，就不要为人们的行为寻找物质或外在刺激的理由
+- 想要禁止一件事，就为人们的行为寻找或制造一个理由，然后把理由撤掉，人们自然就不做了
+
+## 35、踢猫效应--别被坏情绪传染，保留一些理智
+
+- 愤怒时千万不可乱发脾气迁怒他人，可以暂时回避使你愤怒的环境，避免刺激
+- 发怒前一定要尽量使自己冷静下来，再决定怎样做
+- 找到合适的发泄渠道，才能保持心态平和
+
+## 36、以退为进--当对方放松下来你反而能够掌握优势
+
+- 不要在第一时间与他人针锋相对，不要在他人全神戒备的时候做事，否则收效甚微
+- 趁对方放松的时候进攻
+- 学会示弱和后退，这样才能海阔天空，为自己正确更多反击空间
