--- a/墨菲定律.md
+++ b/墨菲定律.md
@@ -2,7 +2,7 @@
 
 ![image-20200531093001304](images/墨菲定律.jpg)
 
-原话：如果有两种以上的方式去做某件事，而其中一种选择方式将导致灾难，则必定有人会做出这种选择
+如果有两种以上的方式去做某件事，而其中一种选择方式将导致灾难，则必定有人会做出这种选择
 
 如果事情有变化的可能，不管这种可能性有多小，它总会发生
 
@@ -288,3 +288,29 @@
 - 不要在第一时间与他人针锋相对，不要在他人全神戒备的时候做事，否则收效甚微
 - 趁对方放松的时候进攻
 - 学会示弱和后退，这样才能海阔天空，为自己正确更多反击空间
+
+## 37、蓝斯登原则--没看清出路之前，别盲目跳进去
+
+往上爬的时候一定要保持梯子的整洁，否则下来的时候可能摔倒
+
+- 得意时要为以后留下退路，为自己结交好援手，才能够在困境时有人相帮
+- 懂得宽容别人，才能为自己留好退路
+- 宠辱不惊，得意时不骄横，失意时才不会黯然
+
+## 38、交往适度定律--对别人过度示好，反而降低了自己的价值
+
+一斗米养个恩人，一石米养个仇人
+
+- 对人好要有个度
+- 在别人需要帮助的时候去帮助他，但不要太多，才可能使他对你产生恩情
+- 不要让自己的感情、帮助太廉价，否则就没有被珍惜的价值
+
+## 39、蔡戈尼效应--找到正确做事驱动力而不是靠欲望维持
+
+人们天生有一种办事有始有终的驱动力，如果一件事情尚未完成，就会有进行下去的动力，如果已经完成，人们就会把这件事忘记
+
+- 对于困难的事，一定要求自己马上去做，就能够有始有终地完成
+- 不能做的事情，一开始就要禁止，不要找借口让自己开始，否则就会停不下来
+- 想要别人热情不消失，就不要把“已经完成”的印象给他
+- 适当调节自己做事的节奏，不要让自己变成一个工作狂
+
