墨菲定律完成

--- a/墨菲定律.md
+++ b/墨菲定律.md
@@ -314,3 +314,190 @@
 - 想要别人热情不消失，就不要把“已经完成”的印象给他
 - 适当调节自己做事的节奏，不要让自己变成一个工作狂
 
+## 40、手表定律--目标清晰明确，否则你将陷入混乱
+
+有2个以上手表，并不能给你准确的时间，反而会制造混乱
+
+- 制定出的目标一定要明确，不能模凌两可，确切的目标才能指导出确切的行为
+- 一个组织不能同时有两个人来指挥，一件事不能同时由2个人来做
+- 一定要懂得取舍，该放则放，不要贪心
+
+## 41、奥卡姆剃刀定律--化繁为简，反而可以轻松自如
+
+“如无必要，勿增实体”、“简单有效”
+
+- 不要被细枝末节阻碍了视线，把握住事情的本质才能快速有效的解决好它
+- 不要人为地把事情复杂化
+- 事先不要揣测别人的心思，直冲目标而去，简单一些反而轻松
+
+## 42、霍布森选择效应--固定选择是圈套，不如及时跳出来
+
+让别人别无选择的询问方式，叫做霍布森选择效应
+
+- 充分了解更多更客观的信息，就是从固有选择跳出来的基础
+- 在选择之前，需要充分了解各方面的信息，包括与你的思维方式相反的信息、不相关的信息等
+- 把这些信息组合起来创造一条新的道路
+
+## 43、人际吸引递减原则--让好感逐渐增加你能更加受欢迎
+
+人们总是喜欢得到的东西递增，无论这种东西是物质的奖励，还是精神上的表扬
+
+- 对人要先扬后抑，赞扬要逐渐增加
+- 不要过于急切表现自我，要慢慢去表现自己的闪光点
+
+## 44、反木桶原理--别盯着短板，用长处去做事
+
+木桶最长的一根木板决定了其特殊与优势，在一个小范围内成为制高点往往能够成为自己可持续发展的特殊优势
+
+爱因斯坦偏物理，华罗庚偏数学，李白偏诗歌，罗纳尔多偏足球，张衡偏天文
+
+- 善于用自己相对优势去攻击别人的弱势，才能在竞争中胜出
+- 永远用自己的优点去做事、去做自己擅长的事，不要执着于与人相争，这样能够带给你朋友和利益
+- 让自己的优势与众不同，才能在众人中胜出
+
+## 45、草船借箭--将他人射来的箭变成你的力量
+
+- 当对方攻势过于猛烈时，不妨用几个烟雾弹，把战火引到自以为是的人身上，最终才可能化为自己的力量
+- 运用旁观者同情弱小、喜欢声讨强势和虚伪者的心理，可以获得舆论的支持，对方的攻击最终就会有利于自己
+- 将对方的攻势化为自己的力量才是聪明的做事方法
+
+## 46、托利得定律--用宽容之心对待不同的想法
+
+看一个人的智力是否上乘，只看其脑子是否能同时容纳两种相反的思想，同时无碍于其处世行事
+
+- 每个人都难免和别人发生冲突，关键时刻行行宽容、装装糊涂，后退一步，才可能使双方都不过于尴尬
+- 有过节的人需要援助之时，要不计前嫌
+
+## 47、南风效应--温暖比寒冷更容易让人接受
+
+南风和北风比威力，看谁能把行人身上的大衣脱掉，北风吹的越大，人们把衣服裹得更紧，南风徐徐吹来，行人觉得温暖如春，然后开始脱大衣
+
+- 对待他人多一分柔软，多一份关爱
+- 善于以柔克刚，以温和对待他人，才能得到更多尊重
+
+## 48、狄伦多定律--问题未发生前，先把矛盾消除
+
+一个团体中所发生的激烈冲突，往往是因为面子问题引起的。如果在矛盾发生前就给别人留足面子，就能减少冲突
+
+- 不要试图证明别人错了来显示你的高明，因为无论你能否证明，最终输掉的都是你
+- 给别人留点面子，估计别人尊严，就是给自己留余地
+
+## 49、阿伦森效应--委婉周旋，让你更快得到所想
+
+随着奖励的减少而导致态度逐渐消极，随着奖励的增加而导致态度逐渐积极
+
+- 人们往往有逆反心理，越是不让做的事情往往越是想做。
+- 利用迂回效应可以让别人抢着做他们不愿意做的事情
+
+## 50、改宗效应--人们更喜欢那些在自己影响下改变观点的人
+
+如果能够在某件事情上，让反对者改变主意和自己观点一致，人们宁愿要反对者而不要同意者
+
+老好人常常被人当成“墙头草”
+
+- 不妨在温柔讲道理的同时，流露出自己心志坚定、绝不会轻易屈服的一面
+- 意志坚定的人，人们往往会带有几分敬畏，不会轻易冒犯，反而希望能够得到这种人的认可和接纳
+
+## 51、威严效应--威严、少语、沉稳的人更容易被欣赏
+
+在学识、能力、品质相同的情况下，威严、少语、沉稳的人比大大咧咧、多语好动者更容易得到人们的尊敬，也更容易被人欣赏，被提拔的机会也比较多
+
+- 做人、做事方面少一点感情用事，多一点理性思考
+- 做事多一点儿严密和大气，不要过于追求完美，做事不拘小节的人更容易被欣赏
+- 有才华是好事，但不要随意炫耀，以免显得浮夸
+
+## 52、贝勃定律--时机对了，小事也能变得很重要
+
+本身基重很大，对于增加的重量感受越迟钝
+
+- 让一个人心甘情愿追随自己不妨用一件小事让对方对你刮目相看
+- 要选择对方最希望得到的东西，最希望你为他做的事去感动他
+
+## 53、条条是道，讲出道理更容易被人追随
+
+人们都会力图使自己的行为看起来合理，所以人们总是在为自己的行为寻找原因
+
+- 当你为别人寻找理由的时候，一定要寻找内部的理由，而不是表面的原因
+- 多讲“一起努力吧，我相信大家都想做一番大事，赢得属于我们自己的荣耀和地位”
+- 讲出你的道理，更容易被人信任和追随
+
+## 54、激将效应--使点激将法让对方按你的想法去做
+
+通过反向刺激促使被刺激者做正向行为
+
+- 激将法必须对性格刚直的人才能运用，过于懦弱的人反而会被吓到
+- 激将法一定要踩到他人的痛处
+
+## 55、白璧微瑕效应--暴露一些小缺点让你更受欢迎
+
+小小的错误会使有才能的人的人际吸引力更高
+
+- 一个容易犯小错误的能力出众者，降低了普通人的心理压力，缩小了和平庸者的心理距离，保护了他们的自尊，能得到更多人的喜爱和追随
+- 如果你是一个强者，一定要暴露一些小缺陷，才显得更加平易近人
+- 如果你是平庸者，一定要兢兢业业和谨小慎微，不断努力才能得到人们的认同和追随
+
+## 56、成大事者要有不动声色的能力
+
+人们惧怕敬畏表面不动声色暗地里却有自己主意的人
+
+- 平时不要把喜怒挂在脸上，否则会被人们认为不成熟、不稳重
+- 不动声色、深藏不漏，让人们看不出深浅，才更容易被畏惧
+- 不要暴露自己做事的目标，就能减少很多阻力
+
+## 57、别太快透露目标，小心被反噬
+
+如果你的宣传过于夸张、批评时间过长、奉承过于拙劣露骨，就会引起人们的反感，造成结果与预期相反
+
+- 不要轻易暴露自己的最终目标
+- 达成目标的方式应符合人们的心理
+- 遇到阻碍行为，可以适当放些烟雾弹迷惑对方，避开阻碍
+
+## 58、禁果逆反心理--吊足胃口让事情更有吸引力
+
+理由不充分的禁止反而会激发人们强烈的探究欲望，这是由人们的“好奇心”和“逆反心理”决定的
+
+## 59、动机适度定律--别轻易暴露真实动机才能成就事业
+
+只有适度的动机才能帮你真正达到目的，如果动机太强，反而会因为自身的紧张或遭人反对而发挥不出自己的真正水平，事情也不可能顺利
+
+- 越固执己见，反对意见就会反弹的越厉害，做起事情来阻碍也会越大
+- 掩藏真实动机非常重要，只有看起来轻松自然没有野心，才会最终满足自己的野心
+
+## 60、遮蔽效应--别被一时的表现所蒙蔽
+
+耳朵对声音频率的敏感地带表现为强的信号会遮蔽临近频率的弱信号
+
+- 学会韬光养晦，不要急于表现自己，风头太盛必遇摧折
+- 不妨将自己遮蔽在风头更健的人身后，减弱自己的威胁感，为自己争取壮大的时间
+
+## 61、互惠关系定律--让对方得到足够好处，关系才能长远
+
+人与人之间的交往，本质上就是一种社会交换，通常付出和得到自由对等才能使这种关系维持下去
+
+给予就会被给予，剥夺就会被剥夺，信任就会被信任，怀疑就会被怀疑，爱就会被爱，恨机会被恨
+
+- 为人效力，应该不遗余力，这样既可以锻炼自己获得经验，也可以日后得到别人的帮助和提携
+- 帮助别人就是等于帮助自己，多做些雪中送炭的事，更有利于自己日后的发展
+- 从长远来看，吃亏是福，吃点小亏会带来更多发展机会
+
+## 62、特里法则--不愿意承担责任的人，也没有办法担当大任
+
+承认错误是一个人最大的力量源泉，因为正视错误的人将得到错误以外的东西
+
+- 敢于承认错误、承担责任都能得到人们的信任和尊重
+- 愿意承担责任，才能在未来的时候担负起重任
+
+## 63、路径依赖原理--让他人认同你，他们才会一直跟随你
+
+人们一旦做出某种选择，惯性的力量会使这一选择不断自我强化，让人萌不能轻易走出去
+
+- 选择正确的行事方法去坚持
+- 选择一个美好、人们愿意追随的品格坚持下去，人们就会由始至终支持你、帮助你
+
+## 64、友谊需要经营，别到用人时才想去来去联系
+
+投资人情永远都不会产生亏损
+
+- 平时多和朋友联系，关键时刻才能有人帮
+- 高瞻远瞩，多结交有志之士，才能在将来成就事业的时候有人支持
+
